test: add basic entities tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
       "target": "es6",
+      "module": "ESNext",
       "moduleResolution": "node",
       "outDir": "./lib",
       "declaration": true,
