--- a/package.json
+++ b/package.json
@@ -12,23 +12,48 @@
     "ecs",
     "entity component system"
   ],
+  "type": "module",
   "main": "./index.js",
-  "module": "./index.js",
+  "module": "./lib/index.js",
   "types": "./index.d.ts",
   "scripts": {
     "build": "npm run copy:to:dist && tsc",
     "start": "npm run copy:to:dist && tsc --watch",
     "lint": "eslint src",
+    "test": "ava",
     "pretty": "prettier ./src/ --write",
     "copy:to:dist": "cp package.json lib && cp README.md lib"
   },
   "devDependencies": {
+    "@ava/typescript": "^1.1.1",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
+    "ava": "^3.15.0",
     "eslint": "^7.17.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^4.3.8",
     "prettier": "^2.2.1",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
+  },
+  "ava": {
+    "extensions": {
+      "ts": "module"
+    },
+    "nonSemVerExperiments": {
+      "configurableModuleFormat": true
+    },
+    "nodeArguments": [
+      "--loader=ts-node/esm"
+    ],
+    "files": [
+      "test/**/*.test.ts"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run pretty"
+    }
   }
 }
