--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fecs",
   "version": "0.0.1",
-  "description": "Fast & Flexible EntityComponentSystem (ECS) for JavaScript",
+  "description": "Fast & Flexible EntityComponentSystem (ECS) for JavaScript & TypeScript",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DavidPeicho/flecs.git"
@@ -13,20 +13,24 @@
     "entity component system"
   ],
   "type": "module",
-  "main": "./index.js",
-  "module": "./lib/index.js",
+  "main": "./umd/fecs.js",
+  "module": "./index.js",
   "types": "./index.d.ts",
   "scripts": {
-    "build": "npm run copy:to:dist && tsc",
+    "build": "npm run copy:to:dist && npm run build:ts && npm run build:umd",
+    "build:ts": "tsc",
+    "build:umd": "rollup -c",
     "start": "npm run copy:to:dist && tsc --watch",
     "examples": "http-server ./ -c-1 -p 8080 --cors ./example",
     "lint": "eslint src",
     "test": "ava",
     "pretty": "prettier ./src/ ./test --write",
-    "copy:to:dist": "cp package.json lib && cp README.md lib"
+    "copy:to:dist": "node --experimental-modules ./scripts/copy-to-dist.js"
   },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
+    "@rollup/plugin-node-resolve": "^11.1.1",
+    "@rollup/plugin-replace": "^2.3.4",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
     "ava": "^3.15.0",
@@ -36,6 +40,8 @@
     "http-server": "^0.12.3",
     "husky": "^4.3.8",
     "prettier": "^2.2.1",
+    "rollup": "^2.38.5",
+    "rollup-plugin-terser": "^7.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
