--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,20 @@
 {
   "env": { "es6": true, "browser": true },
 
+  "parserOptions": {
+    "sourceType": "module"
+  },
+
   "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
     "prettier",
     "prettier/@typescript-eslint"
   ],
 
   "plugins": [
+    "@typescript-eslint",
     "prettier"
   ]
 }
