example: ts: add first example to demonstrate TS

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "build:umd": "rollup -c",
     "start": "npm run copy:to:dist && tsc --watch",
     "example": "http-server ./ -c-1 -p 8080 --cors ./example",
+    "example:build": "tsc ./example/typescript/**/*.ts --target ES6 --experimentalDecorators && npm run example",
+    "example:start": "tsc ./example/typescript/**/*.ts --target ES6 --experimentalDecorators -w && npm run example",
     "lint": "eslint ./src/**/*.ts",
     "test": "ava",
     "pretty": "prettier ./src/ ./test --write",
