--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "benchmark": "node --expose-gc --loader ts-node/esm ./benchmark/index.ts",
     "lint": "eslint ./src/**/*.ts",
     "test": "ava",
+    "test:coverage": "c8 check-coverage --lines 90 --functions 90 --branches 90 npm test",
+    "coverage": "c8 npm test",
     "pretty": "prettier ./src/ ./test ./benchmark --write",
     "copy:to:dist": "node --experimental-modules ./scripts/copy-to-dist.js"
   },
@@ -39,6 +41,7 @@
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
     "ava": "^3.15.0",
+    "c8": "^7.7.1",
     "chalk": "^4.1.0",
     "eslint": "^7.17.0",
     "eslint-config-prettier": "^7.1.0",
